# clawswarm

./: .env.template  .gitignore  ABOUT.md  ABOUT_CN.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Dockerfile  EVOLUTION.md  LICENSE  MODULES.md  MODULES_CN.md  README.md  README_CN.md  add_task.py  agent_adapter.py  api.py  auth.py  autoscale.py  batch_add_tasks.py  checkpoint.py  clawchat.py  cli.py  config.py  dead_letter.py  demo.py  demo_viral.md  demo_viral.py  deploy.sh  discovery.py  docker-compose.yml  edge.py  events.py  evolver_adapter.py  executor.py  federated.py  guard.py  (+42 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
dashboard/: __init__.py  dashboard.py  index.html
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  DEPLOY.md  DEVICE_TYPES.md  DEVICE_TYPES_CN.md  EVOLUTION.md  MCP_SERVER.md  NODE-CONFIG.md  PHASE2_DESIGN.md  SANDBOX.md  SANDBOX_CN.md  TASK-FORMAT.md
examples/: 01_quickstart.py  02_parallel.py  04_mcp_demo.py  README.md  demo.py
sessions/: a-session-20260416-am.md
skill/: SKILL.md
skill/scripts/: aggregate.py  poll.py  spawn.py
tests/: test_agent_adapter.py  test_all.py  test_hub_agent_adapter.py  test_spawn_manager.py  test_v040.py  test_v050.py  test_v060.py  test_v085.py
