[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawswarm"
version = "0.3.0"
description = "Multi-Agent Orchestration Framework - Coordinate multiple AI Agents like a lobster swarm 🦞"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "liangfuliang541-pixel", email = "liangfuliang541@gmail.com"}
]
keywords = ["ai", "agents", "multi-agent", "orchestration", "clawswarm", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"
dependencies = [
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
monitor = [
    "psutil>=5.9.0",
]

[project.scripts]
clawswarm = "swarm_scheduler:main"
claw-node = "swarm_node:main"

[project.urls]
Homepage = "https://github.com/liangfuliang541-pixel/clawswarm"
Documentation = "https://github.com/liangfuliang541-pixel/clawswarm#readme"
Repository = "https://github.com/liangfuliang541-pixel/clawswarm"
Issues = "https://github.com/liangfuliang541-pixel/clawswarm/issues"
Discussions = "https://github.com/liangfuliang541-pixel/clawswarm/discussions"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarm*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
